css/style.css
#main-bg{
	width: 100%;
	height: 100%;
	background: url('../images/Layer-5.png') no-repeat;
	position: relative;
  z-index: 1;
}

body {
  font-family: 'Montserrat';
}

.text-vertical-center > h1 {
  font-size: 48px;
  color: rgb(255, 255, 255);
  line-height: 1.458;
  margin-top: 105px;
  font-weight: normal;
}

.name {
  color: rgb(42, 93, 163);
}


.clear-button {
  font-size: 14px;
  font-weight: bold;
  border-style: solid;
  line-height: 2.6;
  border-width: 2px;
  border-radius: 25px;
  border-color: rgb(21, 59, 109);
  background-color: Transparent;
  width: 194px;
  height: 54px;
  color: rgb(255, 255, 255);
}

.clear-button:hover {
  background-color: rgb(255, 255, 255);
  color: rgb(21, 59, 109);
  transition: all 0.5s;
}

.logo {
  margin-left: 100px;
  margin-top: 60px;
  width: 83px;
  height: 67px;
  display: inline-block;
}

.logo-title {
  display: inline-block;
  font-size: 30px;
  color: rgb(255, 255, 255);
  font-weight: bold;
  line-height: 2.333;
  margin-top: 60px;
  position: absolute;
  margin-left: 10px;
}

.clear-toggle {
  background-color: transparent;
  color: rgb(42, 94, 164);
  position: absolute;
  width: 100px;
  height: 100px;
  margin-top: 70px;
  margin-right: 100px;
}

.btn:hover.clear-toggle:hover {
  color: rgb(42, 94, 164)
}

.explore {
  margin-top: 200px;
  position: absolute;

}

.explore > img{
    margin:5px;
    z-index: 3;
}

.row.no-gutter {
  margin-left: 0;
  margin-right: 0;
}

.row.no-gutter [class*='col-']:not(:first-child),
.row.no-gutter [class*='col-']:not(:last-child) {
  padding-right: 0;
  padding-left: 0;
}

.features {
  margin-top: 1100px;
}

.headphone {
  margin-left: -140px;
  width: 648px;
  height: 371px;
  position: absolute;
  margin-top: 10px;
  float: left;
/*  padding-right: 100px;*/
}



.features-title {
  margin-top: 100px;
}

.row > p {
  width: 500px;
  margin-top: 20px;
  color: rgb(102, 119, 142);
  font-size: 14px;
  width: 560px;
  height: 119px;
  line-height: 2.571;
}

.features-button {
  color: rgb(255, 255, 255);
  margin-top: 50px;
  margin-right: 335px;
}


.icon {
  width: 80px;
  height: 50px;
}

.bold {
  color: rgb(255, 255, 255);
  line-height: 1.5;
}


.paragraph > p {
  width: 350px;
  line-height: 2;
}

.rest {
  color: rgb(102, 119, 142);
}

.blurb {
  margin-top: 100px;
}

.right-paragraph {
  margin-top: -580px;
}

.headphone-1 {
  margin-top: -580px;
  margin-right: 335px;
}

.cd {
  margin-top: -450px;
  margin-right: 335px;
}

.move-down {
  padding: 200px 0;
}

.centered {
  text-align: center;
}

.header-other {
  margin: 50px 0;
  color: rgb(255, 255, 255);
}

.features {
  margin-bottom: 50px;
}

.red {
  color: #ff0002;
}


.phone-screen {
  height: 500px;
  margin-top: 72px;
}


.text {
  line-height: 2;
  color: rgb(102, 119, 142);
  font-weight: 200;
  padding-bottom: 30px;
}

.white {
  color: rgb(255, 255, 255);
}

.off-white {
  color: rgb(102, 119, 142);
}

.multi-screens {
  width: 700px;
  margin-right: -150px;
  margin-top: -150px;
}

.Graphic {
  background-image: url("Graphic.png");
  position: absolute;
  left: 966px;
  top: 3249px;
  width: 1034px;
  height: 709px;
  z-index: 71;
}


.reviews {
  margin-top: 200px;
}

.carousel {
  width: 1500px;
  margin-left: -185px;
}

.download {
  margin-top: 100px;
}

.download-text {
  margin-top: 50px;
  line-height: 2.5;
}

.move-up {
  margin-top: -125px;
}

.move-up-more {
  margin-top: -325px;
}

.line {
  opacity: 0.349;
  height: .5px;
  border-color: rgb(21, 59, 109);
}

footer {
  padding: 25px 0;
  text-align: center;
  color: rgb(20, 57, 106);
}

.header {
  margin-top: 200px;
}

